content/style update

--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-516-known
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="#" class="navbar-brand">Known</a>
+                    <a href="#" class="navbar-brand">Conisoft</a>
                </div>
 
                <!-- MENU LINKS -->
@@ -67,7 +67,7 @@ https://templatemo.com/tm-516-known
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#"><i class="fa fa-phone"></i> +65 2244 1100</a></li>
+                         <li><a href="#"><i class="fa fa-phone"></i> +52 (664) 9797500</a></li>
                     </ul>
                </div>
 
@@ -89,10 +89,10 @@ https://templatemo.com/tm-516-known
                     <div class="col-md-4 col-sm-6">
                          <div class="footer-info">
                               <div class="section-title">
-                                   <h2>Headquarter</h2>
+                                   <h2>Headquarters</h2>
                               </div>
                               <address>
-                                   <p>1800 dapibus a tortor pretium,<br> Integer nisl dui, ABC 12000</p>
+                                   <p>Universidad Autónoma de Baja California,<br> Facultad de Ciencias Químicas e Ingeniería </p>
                               </address>
 
                               <ul class="social-icon">
@@ -102,9 +102,9 @@ https://templatemo.com/tm-516-known
                               </ul>
 
                               <div class="copyright-text"> 
-                                   <p>Copyright &copy; 2019 Company Name</p>
+                                   <p>Copyright &copy; 2021 Conisoft</p>
                                    
-                                   <p>Design: TemplateMo</p>
+                                   <p>Design: SDGKU Dev Team</p>
                               </div>
                          </div>
                     </div>
@@ -115,8 +115,8 @@ https://templatemo.com/tm-516-known
                                    <h2>Contact Info</h2>
                               </div>
                               <address>
-                                   <p>+65 2244 1100, +66 1800 1100</p>
-                                   <p><a href="mailto:youremail.co">hello@youremail.co</a></p>
+                                   <p>+ 52 (664) 9797500 EXT. 54335</p>
+                                   <p><a href="mailto:reyesjua@uabc.edu.mx">reyesjua@uabc.edu.mx</a></p>
                               </address>
 
                               <div class="footer_menu">
