--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -13,8 +13,8 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Distance Learning Education Center</h1>
-                                             <h3>Our online courses are designed to fit in your industry supporting all-round with latest technologies.</h3>
+                                             <h1>CONISOFT 2021</h1>
+                                             <h3>Bringing together practitioners and researchers from academy, industry, and government in order to advance the state of the art in Software Engineering, as well as generating synergy between academy and industry, defining a collaboration strategy to support and promote the development of the software industry in Mexico and worldwide. Papers that combine theory and practice are especially welcome.</h3>
                                              <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
                                         </div>
                                    </div>
@@ -25,8 +25,8 @@
                               <div class="caption">
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
-                                             <h1>Start your journey with our practical courses</h1>
-                                             <h3>Our online courses are built in partnership with technology leaders and are designed to meet industry demands.</h3>
+                                             <h1>October 25-29, 2021</h1>
+                                             <h3>San Diego Global Knowledge University, in San Diego, CA, USA</h3>
                                              <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a>
                                         </div>
                                    </div>
@@ -57,27 +57,79 @@
                     <div class="col-md-4 col-sm-4">
                          <div class="feature-thumb">
                               <span>01</span>
-                              <h3>Trending Courses</h3>
-                              <p>Known is free education HTML Bootstrap Template. You can download and use this for your website.</p>
+                              <h3>Core Themes</h3>
+                              <p>Requirement engineering</p>
+                              <p>Systems modeling: language & formalization</p>
+                              <p>Architecture and software design</p>
+                              <p>Models and quality systems</p>
+                              <p>Process models</p>
+                              <p>Software metrics</p>
                          </div>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
                          <div class="feature-thumb">
                               <span>02</span>
-                              <h3>Books & Library</h3>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing eiusmod tempor incididunt ut labore et dolore magna.</p>
+                              <h3>Empirical Engineering</h3>
+                              <p>Empirical Methods</p>
+                              <p>Statistical Methods and Measurement</p>
+                              <p>Simulation Methods</p>
+                              <p>Missing Data in Software Engineering</p>
+                              <p>Experimentation in Software Engineering</p>
+                              <p>Human Factors in Software Engineering</p>
                          </div>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
                          <div class="feature-thumb">
                               <span>03</span>
-                              <h3>Certified Teachers</h3>
-                              <p>templatemo provides a wide variety of free Bootstrap Templates for you. Please tell your friends about us. Thank you.</p>
+                              <h3>Engineering Trends</h3>
+                              <p>Complex recommendation systems</p>
+                              <p>Software Engineering for small & large mobile software applications and ecosystems</p>
+                              <p>Modelling and knowledge management</p>
+                              <p>Agents-based methodologies, natural language processing, machine learning</p>
+                              <p>Software Engineering for Cloud Computing, Big Data, Social Computing</p>
                          </div>
                     </div>
 
+                    <div class="col-md-4 col-sm-4">
+                         <div class="feature-thumb">
+                              <span>04</span>
+                              <h3>Other Disciplines</h3>
+                              <p>User-centered design: human-computer interaction, usability engineering</p>
+                              <p>Social Issues in software engineering: psychology, sociology</p>
+                         </div>
+                    </div>
+
+                    <div class="col-md-4 col-sm-4">
+                         <div class="feature-thumb">
+                              <span>05</span>
+                              <h3>Formal Methods</h3>
+                              <p>Theoretical basis for software engineering</p>
+                              <p>Formal methods for software engineering</p>
+                              <p>Experimental evaluation and validation</p>
+                              <p>The split between industry practice and academic research</p>
+                         </div>
+                    </div>
+
+                    <div class="col-md-4 col-sm-4">
+                         <div class="feature-thumb">
+                              <span>06</span>
+                              <h3>Software Engineering Education (SEE)</h3>
+                              <p>Models and Techniques for SEE</p>
+                              <p>Teaching approaches for SEE</p>
+                              <p>Tools for SEE</p>
+                              <p>Strategies and instruments for assessment SEE</p>
+                         </div>
+                    </div>
+
+                    <div class="col-md-4 col-sm-4">
+                         <div class="feature-thumb">
+                              <span>07</span>
+                              <h3>Industry and government experiences</h3>
+                              <p>Cases in industry and government</p>
+                              <p>Study cases in industry and government</p>
+                    </div>
                </div>
           </div>
      </section>
