--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -140,7 +140,7 @@ https://templatemo.com/tm-516-known
                                    <div class="form-group">
                                         <form action="#" method="get">
                                              <input type="email" class="form-control" placeholder="Enter your email" name="email" id="email" required="">
-                                             <input type="submit" class="form-control" name="submit" id="form-submit" value="Send me">
+                                             <input type="submit" class="form-control" name="submit" id="form-submit" value="Signup">
                                         </form>
                                         <span><sup>*</sup> Please note - we do not spam your email.</span>
                                    </div>
