--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -14,7 +14,8 @@
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
                                              <h1>CONISOFT 2021</h1>
-                                             <h3>Bringing together practitioners and researchers from academy, industry, and government in order to advance the state of the art in Software Engineering, as well as generating synergy between academy and industry, defining a collaboration strategy to support and promote the development of the software industry in Mexico and worldwide. Papers that combine theory and practice are especially welcome.</h3>
+                                             <h3>Bringing together practitioners and researchers from academy, industry, and government.<br>
+                                             <br>Advancing the state of the art in Software Engineering, generating synergy between academy and industry.</h3>
                                              <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
                                         </div>
                                    </div>
@@ -26,7 +27,8 @@
                                    <div class="container">
                                         <div class="col-md-6 col-sm-12">
                                              <h1>October 25-29, 2021</h1>
-                                             <h3>San Diego Global Knowledge University, in San Diego, CA, USA</h3>
+                                             <h3>San Diego Global Knowledge University,<br>San Diego, CA, USA
+                                             <br><br>A collaboration strategy to support and promote the development of the software industry in Mexico and worldwide.</h3>
                                              <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a>
                                         </div>
                                    </div>
