--- a/Conisoft/static/css/templatemo-style.css
+++ b/Conisoft/static/css/templatemo-style.css
@@ -353,6 +353,13 @@ https://templatemo.com/tm-516-known
     margin: 0;
     padding: 5px 0 40px 0;
   }
+  #home .caption{
+    background-color: #252525;
+    opacity: .7;
+  }
+  #home .container h1 h3{
+    opacity: 1;
+  }
 
   @media (min-width: 768px) {
     .home-slider .col-md-6 {
@@ -591,7 +598,7 @@ https://templatemo.com/tm-516-known
     background: #0e3c80;
   }
 
-
+ 
 
   /*---------------------------------------
      NEWS              
