--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -18,6 +18,9 @@
                                              <br>Advancing the state of the art in Software Engineering, generating synergy between academy and industry.</h3>
                                              <a href="#feature" class="section-btn btn btn-default smoothScroll">Discover more</a>
                                         </div>
+                                        <div class="conisoft-logo-container">
+                                             <img src="{% static 'images/conisoft_logo.png' %}" class="" alt="" alt="">
+                                        </div>
                                    </div>
                               </div>
                          </div>
@@ -31,6 +34,9 @@
                                              <br><br>A collaboration strategy to support and promote the development of the software industry in Mexico and worldwide.</h3>
                                              <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a>
                                         </div>
+                                        <div class="sdgku-logo-container">
+                                             <img src="{% static 'images/sdgku_logo.png' %}" class="" alt="" alt="">
+                                        </div>
                                    </div>
                               </div>
                          </div>
@@ -42,6 +48,12 @@
                                              <h1>Efficient Learning Methods</h1>
                                              <h3>Nam eget sapien vel nibh euismod vulputate in vel nibh. Quisque eu ex eu urna venenatis sollicitudin ut at libero. Visit <a rel="nofollow" href="https://www.facebook.com/templatemo">templatemo</a> page.</h3>
                                              <a href="#contact" class="section-btn btn btn-default smoothScroll">Let's chat</a>
+                                        </div>
+                                        <div class="ieee-logo-2-container">
+                                             <img src="{% static 'images/ieee_logo_2.png' %}" class="img-responsive" alt="" alt="">
+                                        </div>
+                                        <div class="ieee-logo-container">
+                                             <img src="{% static 'images/ieee_logo.png' %}" class="img-responsive" alt="" alt="">
                                         </div>
                                    </div>
                               </div>
