--- a/Conisoft/static/css/templatemo-style.css
+++ b/Conisoft/static/css/templatemo-style.css
@@ -664,8 +664,8 @@ https://templatemo.com/tm-516-known
 
   #testimonial .item {
     background: #ffffff;
-    margin: 20px 0;
-    padding: 4em 3em;
+    /* margin: 10px 0; */
+    padding: 2em 2em;
     text-align: left;
   }
 
@@ -681,30 +681,36 @@ https://templatemo.com/tm-516-known
   }
 
   .tst-rating {
-    margin-bottom: 15px;
+    /* margin-bottom: 15px; */
   }
 
   .tst-rating .fa {
     color: #0e3c80;
   }
 
-  .tst-image,
+  /* .tst-image,
   .tst-author {
     display: inline-block;
     vertical-align: middle;
-    margin-bottom: 20px;
-    text-align: left;
-  }
+    text-align: center;
+  } */
 
   .tst-image img {
-    border-radius: 50px;
-    width: 60px !important;
-    height: 60px;
-    margin-right: 15px;
+    width: 70% !important;
+    max-width: 20rem;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .tst-author h4 {
     margin: 0;
+    position: absolute;
+    left: 36%;
+    top: 39%;
+    font-weight: bold;
+    font-size: 300%;
+    color: white;
   }
 
   .tst-author span {
