--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -156,29 +156,41 @@
 
                     <div class="col-md-6 col-sm-12">
                          <div class="about-info">
-                              <h2>Start your journey to a better life with online practical courses</h2>
+                              <h2>Call for Papers</h2>
 
                               <figure>
                                    <span><i class="fa fa-users"></i></span>
                                    <figcaption>
-                                        <h3>Professional Trainers</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ipsa voluptatibus.</p>
+                                        <h3>Modalities (Types of work)</h3>
+                                        <ul>
+                                             <li><strong>Track 1:</strong> <p>Scientific papers (original research, basic and experimental).</p></li>
+                                             <li><strong>Track 2:</strong> <p>Work in progress. Papers describing works that are at an early stage of the investigation.</p></li>
+                                        </ul>
                                    </figcaption>
                               </figure>
 
                               <figure>
                                    <span><i class="fa fa-certificate"></i></span>
                                    <figcaption>
-                                        <h3>International Certifications</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ipsa voluptatibus.</p>
+                                        <h3>Submission Requirements</h3>
+                                        <ul>
+                                             <li><strong>Complete Document:</strong><p>Must be submitted as full papers.</p></li>
+                                             <li><strong>Length:</strong><p>From 6 pages to 10 pages.</p></li>
+                                             <li><strong>Language:</strong><p>In English or Spanish.</p></li>
+                                        </ul>
                                    </figcaption>
                               </figure>
 
                               <figure>
                                    <span><i class="fa fa-bar-chart-o"></i></span>
                                    <figcaption>
-                                        <h3>Free for 3 months</h3>
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint ipsa voluptatibus.</p>
+                                        <h3>Review Board</h3>
+                                        <ul>
+                                             <li><strong>Conditions:</strong><p>Submissions will be evaluated by the international reviewers committee.</p></li>
+                                             <li><strong>Comittee:</strong><p>Composed of renowned researchers and professionals.</p></li>
+                                             <li><strong>Consult:</strong><p>Refer to the conference web page</p></li>
+                                             
+                                        </ul>
                                    </figcaption>
                               </figure>
                          </div>
@@ -187,7 +199,7 @@
                     <div class="col-md-offset-1 col-md-4 col-sm-12">
                          <div class="entry-form">
                               <form action="#" method="post">
-                                   <h2>Signup today</h2>
+                                   <h2>Register</h2>
                                    <input type="text" name="full name" class="form-control" placeholder="Full name" required="">
 
                                    <input type="email" name="email" class="form-control" placeholder="Your email address" required="">
@@ -460,93 +472,106 @@
      </section>
 
 
-     <!-- TESTIMONIAL -->
+     <!-- PREVIOUS EDITIONS -->
      <section id="testimonial">
           <div class="container">
                <div class="row">
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              <h2>Student Reviews <small>from around the world</small></h2>
+                              <h2>Previous Editions <small>An Evolution & Histroy of Conisoft</small></h2>
                          </div>
 
                          <div class="owl-carousel owl-theme owl-client">
                               <div class="col-md-4 col-sm-4">
                                    <div class="item">
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/tst-image1.jpg' %}" class="img-responsive" alt="">
-                                        </div>
                                         <div class="tst-author">
-                                             <h4>Jackson</h4>
-                                             <span>Shopify Developer</span>
-                                        </div>
-                                        <p>You really do help young creative minds to get quality education and professional job search assistance. I’d recommend it to everyone!</p>
-                                        <div class="tst-rating">
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
+                                             <a href="http://liim.izt.uam.mx/amis/conisoft2012/"><h4>2012</h4></a>
+                                             <div class="tst-image">
+                                                  <img src="{% static 'images/2012_thumb.jpg' %}" class="img-responsive" alt="">
+                                             </div>
                                         </div>
                                    </div>
                               </div>
 
                               <div class="col-md-4 col-sm-4">
                                    <div class="item">
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/tst-image2.jpg' %}" class="img-responsive" alt="">
-                                        </div>
                                         <div class="tst-author">
-                                             <h4>Camila</h4>
-                                             <span>Marketing Manager</span>
-                                        </div>
-                                        <p>Trying something new is exciting! Thanks for the amazing law course and the great teacher who was able to make it interesting.</p>
-                                        <div class="tst-rating">
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
+                                             <a href="http://conisoft.org/2021/images/pastedition/2013Edition.jpg"><h4>2013</h4></a>
+                                             <div class="tst-image">
+                                                  <img src="{% static 'images/2012_thumb.jpg' %}" class="img-responsive" alt="">
+                                             </div>
                                         </div>
                                    </div>
                               </div>
 
                               <div class="col-md-4 col-sm-4">
                                    <div class="item">
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/tst-image3.jpg' %}" class="img-responsive" alt="">
-                                        </div>
                                         <div class="tst-author">
-                                             <h4>Barbie</h4>
-                                             <span>Art Director</span>
-                                        </div>
-                                        <p>Donec erat libero, blandit vitae arcu eu, lacinia placerat justo. Sed sollicitudin quis felis vitae hendrerit.</p>
-                                        <div class="tst-rating">
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
+                                             <a href="http://conisoft.org/2015/"><h4>2015</h4></a>
+                                             <div class="tst-image">
+                                                  <img src="{% static 'images/2015_thumb.jpg' %}" class="img-responsive" alt="">
+                                             </div>
                                         </div>
                                    </div>
                               </div>
 
                               <div class="col-md-4 col-sm-4">
                                    <div class="item">
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/tst-image4.jpg' %}" class="img-responsive" alt="">
-                                        </div>
                                         <div class="tst-author">
-                                             <h4>Andrio</h4>
-                                             <span>Web Developer</span>
-                                        </div>
-                                        <p>Nam eget mi eu ante faucibus viverra nec sed magna. Vivamus viverra sapien ex, elementum varius ex sagittis vel.</p>
-                                        <div class="tst-rating">
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
-                                             <i class="fa fa-star"></i>
+                                             <a href="http://conisoft.org/2021/images/pastedition/conisoft2016.jpg"><h4>2016</h4></a>
+                                             <div class="tst-image">
+                                                  <img src="{% static 'images/2017_thumb.jpg' %}" class="img-responsive" alt="">
+                                             </div>
                                         </div>
                                    </div>
                               </div>
 
+                              <div class="col-md-4 col-sm-4">
+                                   <div class="item">
+                                        <div class="tst-author">
+                                             <a href="http://conisoft.org/2017/"><h4>2017</h4></a>
+                                             <div class="tst-image">
+                                                  <img src="{% static 'images/2018_thumb.jpg' %}" class="img-responsive" alt="">
+                                             </div>
+                                        </div>
+                                   </div>
+                              </div>
+
+                              <div class="col-md-4 col-sm-4">
+                                   <div class="item">
+                                        <div class="tst-author">
+                                             <a href="http://conisoft.org/2018/public/"><h4>2018</h4></a>
+                                             <div class="tst-image">
+                                                  <img src="{% static 'images/2019_thumb.jpg' %}" class="img-responsive" alt="">
+                                             </div>
+                                        </div>
+                                   </div>
+                              </div>
+
+                              <div class="col-md-4 col-sm-4">
+                                   <div class="item">
+                                        <div class="tst-author">
+                                             <a href="http://conisoft.org/2019/index.php"><h4>2019</h4></a>
+                                             <div class="tst-image">
+                                                  <img src="{% static 'images/2020_thumb.jpg' %}" class="img-responsive" alt="">
+                                             </div>
+                                        </div>
+                                   </div>
+                              </div>
+
+                              <div class="col-md-4 col-sm-4">
+                                   <div class="item">
+                                        <div class="tst-author">
+                                             <a href="http://conisoft.org/2020/"><h4>2020</h4></a>
+                                             <div class="tst-image">
+                                                  <img src="{% static 'images/2020_thumb.jpg' %}" class="img-responsive" alt="">
+                                             </div>
+                                        </div>
+                                   </div>
+                              </div>
+
+                              
                          </div>
 
                </div>
@@ -580,11 +605,11 @@
                          </form>
                     </div>
 
-                    <div class="col-md-6 col-sm-12">
+                    <!-- <div class="col-md-6 col-sm-12">
                          <div class="contact-image">
                               <img src="{% static 'images/contact-image.jpg' %}" class="img-responsive" alt="Smiling Two Girls">
                          </div>
-                    </div>
+                    </div> -->
 
                </div>
           </div>
