added register page

--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -38,7 +38,7 @@
                                    <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a>
                               </div>
                               <div class="sdgku-logo-container">
-                                   <img src="{% static 'images/sdgku_logo.png' %}" class="logo" alt="">
+                                   <img src="{% static 'images/sdgku_logo.png' %}" class="logo" style="width: 500px;">
                               </div>
                          </div>
                     </div>
@@ -58,7 +58,7 @@
                                    <img src="{% static 'images/ieee_logo_2.png' %}" style="width: 500px;">
                               </div>
                               <div class="ieee-logo-container">
-                                   <img src="{% static 'images/ieee_logo.png' %}">
+                                   <img src="{% static 'images/ieee_logo.png' %}" style="width: 500px;">
                               </div>
                          </div>
                     </div>
@@ -242,7 +242,7 @@
 </section>
 
 
-<!-- TEAM -->
+<!-- TEAM
 <section id="team">
      <div class="container">
           <div class="row">
@@ -322,7 +322,7 @@
 
           </div>
      </div>
-</section>
+</section> -->
 
 
 <!-- Courses -->
