--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -517,121 +517,21 @@
                     <div class="section-title">
                          <h2>Previous Editions <small>An Evolution & Histroy of Conisoft</small></h2>
                     </div>
-
-                    <div class="owl-carousel owl-theme owl-client">
+                         {% for object in model %}
                          <div class="col-md-4 col-sm-4">
                               <div class="item">
                                    <div class="tst-author">
-                                        <a href="http://liim.izt.uam.mx/amis/conisoft2012/">
-                                             <h4>2012</h4>
+                                        <a href="{{ object.link }}">
+                                             <h4>{{ object.year }}</h4>
                                         </a>
                                         <div class="tst-image">
-                                             <img src="{% static 'images/2012_thumb.jpg' %}" class="img-responsive"
+                                             <img src="{% static '{{ object.image }}' %}" class="img-responsive"
                                                   alt="">
                                         </div>
                                    </div>
                               </div>
                          </div>
-
-                         <div class="col-md-4 col-sm-4">
-                              <div class="item">
-                                   <div class="tst-author">
-                                        <a href="http://conisoft.org/2021/images/pastedition/2013Edition.jpg">
-                                             <h4>2013</h4>
-                                        </a>
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/2012_thumb.jpg' %}" class="img-responsive"
-                                                  alt="">
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-
-                         <div class="col-md-4 col-sm-4">
-                              <div class="item">
-                                   <div class="tst-author">
-                                        <a href="http://conisoft.org/2015/">
-                                             <h4>2015</h4>
-                                        </a>
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/2015_thumb.jpg' %}" class="img-responsive"
-                                                  alt="">
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-
-                         <div class="col-md-4 col-sm-4">
-                              <div class="item">
-                                   <div class="tst-author">
-                                        <a href="http://conisoft.org/2021/images/pastedition/conisoft2016.jpg">
-                                             <h4>2016</h4>
-                                        </a>
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/2017_thumb.jpg' %}" class="img-responsive"
-                                                  alt="">
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-
-                         <div class="col-md-4 col-sm-4">
-                              <div class="item">
-                                   <div class="tst-author">
-                                        <a href="http://conisoft.org/2017/">
-                                             <h4>2017</h4>
-                                        </a>
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/2018_thumb.jpg' %}" class="img-responsive"
-                                                  alt="">
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-
-                         <div class="col-md-4 col-sm-4">
-                              <div class="item">
-                                   <div class="tst-author">
-                                        <a href="http://conisoft.org/2018/public/">
-                                             <h4>2018</h4>
-                                        </a>
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/2019_thumb.jpg' %}" class="img-responsive"
-                                                  alt="">
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-
-                         <div class="col-md-4 col-sm-4">
-                              <div class="item">
-                                   <div class="tst-author">
-                                        <a href="http://conisoft.org/2019/index.php">
-                                             <h4>2019</h4>
-                                        </a>
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/2020_thumb.jpg' %}" class="img-responsive"
-                                                  alt="">
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-
-                         <div class="col-md-4 col-sm-4">
-                              <div class="item">
-                                   <div class="tst-author">
-                                        <a href="http://conisoft.org/2020/">
-                                             <h4>2020</h4>
-                                        </a>
-                                        <div class="tst-image">
-                                             <img src="{% static 'images/2020_thumb.jpg' %}" class="img-responsive"
-                                                  alt="">
-                                        </div>
-                                   </div>
-                              </div>
-                         </div>
-
-
+                         {% endfor %}
                     </div>
 
                </div>
