--- a/Conisoft/templates/register.html
+++ b/Conisoft/templates/register.html
@@ -1,9 +1,31 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load crispy_forms_tags %}
+
+{% block title %}Login Page{% endblock %}
+
+
 {% block content %}
 
-<h1>Register Page</h1>
-<p>Form goes here</p>
-<button>Register</button>
 
+<div id="stats" class="card opacity-5 mt-5" style="width: 90vw;">
+  <div class="card-body p-3 text-dark rounded shadow">
+      <h3 class="card-body bg-light border shadow rounded">Welcome to Hive</h3>
+      <div class="card-body p-3 bg-dark text-light rounded shadow">
+          <!-- <h3 class="card-title">Entries/Exits</h3> -->
+          <div class="login-form">
+            <br><h2>Please Login</h2><br>
+          <style>.asteriskField{display: none};</style>
+          
+              <form action="" method="post">
+                  {% csrf_token %}
+                  {{ form.username|as_crispy_field }}<br>
+                  {{ form.password|as_crispy_field }}<br><br><br>
+                  <button type="submit" class="shadow btn-block btn-light btn-lg">Enter</button><br>
+              </form>
+          </div>
+          <br>
+      </div>
+
+  </div>
+</div>
 {% endblock content %}
