--- a/Conisoft/templates/register.html
+++ b/Conisoft/templates/register.html
@@ -1,24 +1,18 @@
-{% extends 'base.html' %}
-{% load crispy_forms_tags %}
+{% extends "base.html" %}
 
-{% block title %}Sign Up{% endblock %}
+{% block content %} 
 
-{% block content %}
-  <style>.asteriskField{display: none};</style>
+{% load crispy_forms_tags %}         
 
-  <div id="stats" class="card opacity-5 mt-5" style="width: 90vw;">
-    <div class="card-body p-3 text-dark rounded shadow">
-        <h3 class="card-body bg-light border shadow rounded">Sign Up</h3>
-        <div class="card-body p-5 bg-dark text-light rounded shadow">
-          <form method="post">
-            {% csrf_token %}
-            <!-- {{ form|crispy }} -->
-            {{ form.username|as_crispy_field }}<br>
-            <!-- {{ form.password1|as_crispy_field }}<br>
-            {{ form.password2|as_crispy_field }}<br> -->
-            <button type="submit" class="btn-block btn-light btn-lg text-dark">Complete</button>
-          </form>
-        </div>
-    </div>
+<!--Register--> 
+<div class="container py-5">
+	<h1>Register</h1>
+	<form method="POST">
+		{% csrf_token %}
+		{{ register_form|crispy }}                    
+		<button class="btn btn-primary" type="submit">Register</button>
+	</form>
+	<p class="text-center">If you already have an account, <a href="/login">login</a> instead.</p>
 </div>
+
 {% endblock %}
