--- a/Conisoft/templates/login.html
+++ b/Conisoft/templates/login.html
@@ -1,31 +1,18 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% block content %}      
+
 {% load crispy_forms_tags %}
 
-{% block title %}Login Page{% endblock %}
-
-
-{% block content %}
-
-
-<div id="stats" class="card opacity-5 mt-5" style="width: 90vw;">
-  <div class="card-body p-3 text-dark rounded shadow">
-      <h3 class="card-body bg-light border shadow rounded">Welcome to Hive</h3>
-      <div class="card-body p-3 bg-dark text-light rounded shadow">
-          <!-- <h3 class="card-title">Entries/Exits</h3> -->
-          <div class="login-form">
-            <br><h2>Please Login</h2><br>
-          <style>.asteriskField{display: none};</style>
-          
-              <form action="" method="post">
-                  {% csrf_token %}
-                  {{ form.username|as_crispy_field }}<br>
-                  {{ form.password|as_crispy_field }}<br><br><br>
-                  <button type="submit" class="shadow btn-block btn-light btn-lg">Enter</button><br>
-              </form>
-          </div>
-          <br>
-      </div>
-
-  </div>
+<!--Login--> 
+<div class="container py-5">
+  <h1>Login</h1>
+  <form method="POST">
+    {% csrf_token %}
+    {{ login_form|crispy }}
+    <button class="btn btn-primary" type="submit">Login</button>
+  </form>
+  <p class="text-center">Don't have an account? <a href="/register">Create an account</a>.</p>
 </div>
-{% endblock content %}
+
+{% endblock %}
