--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -92,7 +92,7 @@
                </div>
 
 
-<!-- REGISTER -->
+               <!-- REGISTER -->
                <div class="col-md-offset-1 col-md-4 col-sm-12">
                     <div class="entry-form">
                          <form action="#" method="post">
@@ -208,7 +208,7 @@
                     <div class="section-title">
                          <h2>Popular Courses <small>Upgrade your skills with newest courses</small></h2>
                     </div>
-                    
+
                     <div class="owl-carousel owl-theme owl-courses">
                          {% for object in courses %}
                          <div class="col-md-4 col-sm-4">
@@ -216,12 +216,12 @@
                                    <div class="courses-thumb">
                                         <div class="courses-top">
                                              <div class="courses-image">
-                                                  <img src="{{ object.image.url }}"
-                                                       class="img-responsive" alt="">
+                                                  <img src="{{ object.image.url }}" class="img-responsive" alt="">
                                              </div>
                                              <div class="courses-date">
                                                   <span><i class="fa fa-calendar"></i>{{ object.date }}</span>
-                                                  <span><i class="fa fa-clock-o"></i> {{ object.time_length }} Hours</span>
+                                                  <span><i class="fa fa-clock-o"></i> {{ object.time_length }}
+                                                       Hours</span>
                                              </div>
                                         </div>
 
@@ -232,7 +232,8 @@
 
                                         <div class="courses-info">
                                              <div class="courses-author">
-                                                  <img src='{{ object.presenter_image.url }}' class="img-responsive" alt="">
+                                                  <img src='{{ object.presenter_image.url }}' class="img-responsive"
+                                                       alt="">
                                                   <span>{{ object.presenter }}</span>
                                              </div>
                                              <div class="courses-price">
@@ -268,8 +269,7 @@
                                              <h4>{{ object.year }}</h4>
                                         </a>
                                         <div class="tst-image">
-                                             <img src='{{ object.image.url }}' class="img-responsive"
-                                                  alt="">
+                                             <img src='{{ object.image.url }}' class="img-responsive" alt="">
                                         </div>
                                    </div>
                               </div>
@@ -283,42 +283,10 @@
 
 
 <!-- CONTACT -->
-<section id="contact">
-     <div class="container">
-          <div class="row">
+{% if not user.is_authenticated %}
+     {% block form %}
 
-               <div class="col-md-6 col-sm-12">
-                    <form id="contact-form" role="form" action="" method="post">
-                         <div class="section-title">
-                              <h2>Contact us <small>we love conversations. let us talk!</small></h2>
-                         </div>
-
-                         <div class="col-md-12 col-sm-12">
-                              <input type="text" class="form-control" placeholder="Enter full name" name="name"
-                                   required="">
-
-                              <input type="email" class="form-control" placeholder="Enter email address" name="email"
-                                   required="">
-
-                              <textarea class="form-control" rows="6" placeholder="Tell us about your message"
-                                   name="message" required=""></textarea>
-                         </div>
-
-                         <div class="col-md-4 col-sm-12">
-                              <input type="submit" class="form-control" name="send message" value="Send Message">
-                         </div>
-
-                    </form>
-               </div>
-
-               <!-- <div class="col-md-6 col-sm-12">
-                         <div class="contact-image">
-                              <img src="{% static 'images/contact-image.jpg' %}" class="img-responsive" alt="Smiling Two Girls">
-                         </div>
-                    </div> -->
-
-          </div>
-     </div>
-</section>
+     {% endblock %}
+{% endif %}
 
 {% endblock content %}
