User Creation Fix

--- a/Conisoft/templates/workshops.html
+++ b/Conisoft/templates/workshops.html
@@ -22,8 +22,7 @@
                                 </div>
                                 <div class="courses-date">
                                     <span><i class="fa fa-calendar"></i>{{ object.date }}</span>
-                                    <span><i class="fa fa-clock-o"></i> {{ object.time_length }}
-                                        Hours</span>
+                                    <span><i class="fa fa-clock-o"></i> {{ object.time_length }} Hours</span>
                                 </div>
                             </div>
 
