--- a/Conisoft/templates/index.html
+++ b/Conisoft/templates/index.html
@@ -15,7 +15,7 @@
                                    <h1>{{ object.heading }}</h1>
                                    <h3>{{ object.text }}
                                    </h3>
-                                   <a href="#courses" class="section-btn btn btn-default smoothScroll">Take a course</a>
+                                   <a href="/workshops" class="section-btn btn btn-default smoothScroll">Take a course</a>
                               </div>
                               <div class="sdgku-logo-container">
                                    <img src="{{ object.logo_image.url }}" class="logo" style="width: 500px;">
@@ -76,23 +76,6 @@
                </div>
           </div>
 </section>
-
-
-<!-- FEATURE -->
-<!-- <section id="feature">
-     <div class="container">
-          <div class="row">
-               {% for object in topics %}
-               <div class="col-md-4 col-sm-4">
-                    <div class="feature-thumb">
-                         <span>{{ object.id }}</span>
-                         <h3>{{ object.name }}</h3>
-                         <p>{{ object.about }}</p>
-                    </div>
-               </div>
-               {% endfor %}
-          </div>
-</section> -->
 
 
 <!-- ABOUT -->
