--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -148,6 +148,6 @@
      <script src="{% static 'js/owl.carousel.min.js' %}"></script>
      <script src="{% static 'js/smoothscroll.js' %}"></script>
      <script src="{% static 'js/custom.js' %}"></script>
-
+     {% block scripts %}{% endblock scripts %}
 </body>
 </html>
