--- a/Conisoft/templates/base.html
+++ b/Conisoft/templates/base.html
@@ -45,7 +45,7 @@
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                         {% if 'register' in request.path or 'login' in request.path or 'workshops' in request.path or 'manage' in request.path %}
+                         {% if 'register' in request.path or 'login' in request.path or 'workshops' in request.path or 'manage' in request.path or 'receipt' in request.path %}
                               <li><a href="/#home" class="smoothScroll">Home</a></li>
                               <li class ="{% if request.path == '/workshops' %} active {% endif %}"><a href="/workshops" class="smoothScroll">Workshops</a></li>
                               <li><a href="/#about" class="smoothScroll">Requirments</a></li>
@@ -73,6 +73,9 @@
                          <li class ="{% if request.path == '/login' %} active {% endif %}"><a href="/login">Login</a></li>
                          <li class="{% if request.path == '/register' %} active {% endif %}"><a href="/register">Register</a></li>
                          {% else %}
+                         {% if not user.receipt %}
+                         <li class="{% if request.path == '/receipt' %} active {% endif %}"><a href="/receipt">Add Receipt</a></li>
+                         {% endif %}
                          <li><a href="/logout">Logout</a></li>
                          {% endif %}
                     </ul>
